force-app/main/default/objects/Attempt__c/fields/Identification_Time__c.field-meta.xml
<CustomField>
    <fullName>Identification_Time__c</fullName>
    <label>Identification Time</label>
    <type>DateTime</type>
</CustomField>