force-app/main/default/objects/Attempt__c/fields/KYC_Detail__c.field-meta.xml
<CustomField>
    <fullName>KYC_Detail__c</fullName>
    <label>KYC Detail</label>
    <referenceTo>KYC_Detail__c</referenceTo>
    <relationshipLabel>Attempts</relationshipLabel>
    <relationshipName>Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>