force-app/main/default/objects/Attempt__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REVIEW_PENDING</fullName>
                <label>Review Pending</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <label>Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>