force-app/main/default/objects/Attempt__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APP</fullName>
                <label>App</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>